TimeReport Action buttons  alignment issues
git-svn-id: https://subversion.assembla.com/svn/projectx-0/stable@1888 b02b8b71-e8a6-4a5c-b3be-45d727391186

--- a/Angular4.0/ProjectX/src/css/projectx.css
+++ b/Angular4.0/ProjectX/src/css/projectx.css
@@ -97,7 +97,7 @@ background-color: #237ea7;
 .fielderror {
 	position: relative;margin-top:4px;
 	background: #d50000;
-	padding:2px 5px;color:#fff;font-size:12px}
+	padding:5px;color:#fff;font-size:12px}
 .fielderror:after {
 	bottom: 100%;
 	left: 10px;
